# deadbeef

./: README  configure.ac  playlist.c  plugins.c
plugins/gnome_media_key/: Makefile.am  gnome_media_key.c
plugins/gtkui/: ddblistview.c  gtkui.c  gtkui.h  widgets.c
plugins/lastfm/: lastfm.c
plugins/media_key/: Makefile.am  marshal.list  media_key.c
